--- a/JS/cv/cv.html
+++ b/JS/cv/cv.html
@@ -36,12 +36,12 @@
           </div>
           <div class="deatil_tab">
             <i class="fa-brands fa-github icon"></i>&nbsp;&nbsp;
-            <a class="p_right"> www.github.com/Prashant-mishr</a>
+            <a class="p_right"> https://github.com/Prashant-mishr</a>
           </div>
           <div class="deatil_tab">
             <i class="fa-brands fa-linkedin icon"></i>&nbsp;&nbsp;
             <a class="p_right">
-              www.linkedin.com/in/prashant-mishra-bbaa33106/
+              https://www.linkedin.com /in/prashant-mishra-bbaa33106/
             </a>
           </div>
           <div class="deatil_tab">
@@ -83,7 +83,7 @@
           <h3 class="heading">Profile</h3>
           <p class="description">
             Having Experiance more than 3 years in IT industry including 1 year
-            as Functional Counsltant. Mainly worked in service based project in
+            as Odoo Functional Counsltant. Mainly worked in service based project in
             healthcare domain for US based client. Experiance in JavaScript,
             node & react. Searching an opportunity to work in both-end in
             JavaScript.
@@ -126,27 +126,34 @@
         <div id="exptimeline">
           <h3 class="heading">Experience Timeline</h3>
           <div class="expno">
-            <h4 class="company">1. Ksolves India Ltd (nov-2021- present)</h4>
+            <h4 class="company">1. Ksolves India Ltd (Nov-2021 - Present)</h4>
+            <p class="roles">
+              <b><u>Role</u></b> : Software Developer
+            </p>
+            <p class="roles">
+              <b><u>Project details</u></b> : Service Based Project for Us
+              Client on Helthacre domain, Technology used - Node-Js, React-js,
+              Typescript, JSON, Tailwind.
+            </p>
+            <p class="roles">
+              <b><u>Responsibility</u></b> : &#x27A4; My work to Add new tenants
+              & functionality based on predifened methods, control UI behaviour
+              through Back-end, & flow management of process.
+            </p>
             <p class="roles">
               &#x27A4; Created responsive webpages for the requiretment portal
               website
             </p>
-            <p class="roles">
-              &#x27A4;Collobarate with backend team members to implement feature
-              update
-            </p>
-            <p class="roles">
-              &#x27A4; Architected product tours with React for a new feature
-              that improved customer adoption & Developed resusable UI component
-              in React.js
-            </p>
           </div>
           <div class="expno">
             <h4 class="company">
-              2. Verts Services India Pvt Ltd (sep-2020- nov21)
+              2. Verts Services India Pvt Ltd (Sep-2020 - Nov21)
             </h4>
             <p class="roles">
-              &#x27A4; Worked as Functional Consultant on the module like- CRM,
+              <b><u>Role</u></b> : Functional Consultant
+            </p>
+            <p class="roles">
+              <b><u>Responsibility</u></b> :&#x27A4; Worked as Functional Consultant on the module like- CRM,
               Sales, Accounting, Payroll, HR, Inventory . .
             </p>
             <p class="roles">
